[metadata]
name = harpoon
version = attr: harpoon.version.HARPOON_VERSION
author = Tek
author_email = tek@randhome.io
description = Another OSINT CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/te-k/harpoon
keywords = security, osint, threatintelligence
license = GPLv3
classifiers =
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python :: 3


[options]
packages = find:
package_dir = = ./
include_package_data = True
python_requires = >= 3.5
install_requires =
    IPy
    requests
    consolemd
    appdirs
    rich

[options.packages.find]
where = ./

[options.entry_points]
console_scripts =
    harpoon = harpoon.cli:cli

[options.package_data]
harpoon = harpoon/data/*.conf

[flake8]
max-complexity = 10
max-line-length = 1000
ignore =
    C901,
    E265,
    F401,
    E127,
    W503,
    E226,
    E203

[mypy]
ignore_missing_imports = True

[isort]
profile=black
